# chilota

./: .gitignore  Docker.md  QWEN.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sh  package-lock.json
backend/: DEPLOYMENT.md  Dockerfile  Dockerfile.prod  GEMINI.md  QWEN.md  README.md  SECURITY.md  db.sqlite3  debug_checksum.py  debug_ids.py  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  manage.py  nginx.conf  pyproject.toml
backend/.github/workflows/: ci-cd.yml
backend/api/: api.py
backend/apps/admin_panel/: api.py  models.py  schemas.py  serializers.py  tests.py  tests_analytics.py  urls.py  views.py
backend/apps/employers/: api.py  models.py  schemas.py  serializers.py  tests.py  tests_management.py  urls.py  views.py
backend/apps/jobs/: models.py  tests.py
backend/apps/notifications/: api.py  models.py  schemas.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/workers/: api.py  file_security.py  models.py  schemas.py  serializers.py  test_performance.py  tests.py  tests_management.py  tests_search.py  urls.py  views.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/settings/: __init__.py  base.py  local.py  production.py  staging.py
backend/requirements/: base.txt  local.txt
backend/services/: id_verification_service.py  tests.py
backend/templates/notifications/: email_template.html
backend/users/: api.py  auth.py  file_security.py  models.py  permissions.py  schemas.py  serializers.py  test_auth.py  test_file_upload.py  test_media_serving.py  tests.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_userfile.py  (+3 more)
backend/utils/: fayda_id_validator.py  lmis_exporter.py  tests.py  tests_lmis.py
docs/: design.md  (+2 more)
(+135 files in other folders)
