[tool.poetry]
name = "ethiopian-domestic-skilled-worker-platform"
version = "0.1.0"
description = "A platform connecting households and businesses with domestic and skilled workers across Ethiopia"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14"
psycopg2-binary = "^2.9"
redis = "^4.5"
django-redis = "^5.2"
celery = "^5.3"
djangorestframework-simplejwt = "^5.2"
pillow = "^10.0"
django-cors-headers = "^4.2"
channels = "^4.0"
gunicorn = "^21.2"
python-decouple = "^3.8"
django-extensions = "^3.2"
whitenoise = "^6.5"
django-filter = "^23.2"
dj-database-url = "^2.1.0"
python-magic = "^0.4.27"
pyclamd = "^0.4.0"
django-imagekit = "^5.0.0"
sentry-sdk = {version = "^1.40.6", extras = ["django"]}
django-encrypted-model-fields = "^0.6.5"
django-ninja = "^1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
pytest-benchmark = "^4.0.0"
black = "^23.7"
flake8 = "^6.0"
isort = "^5.12"
factory-boy = "^3.2"
django-debug-toolbar = "^4.2"
pre-commit = "^3.3"
Faker = "^20.0.0"

[tool.poetry.group.sms.dependencies]
twilio = "^8.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"
DJANGO_SETTINGS_MODULE = "laborcon.settings"